feat(agent): overhaul bundled skills, debug tools, and system prompt
Skills (all 8 updated):
- Fix stale tool names across all skills (ask_questions→ask_followup_question,
  create_plan→plan mode, git meta-tool→individual tools, subagent_type→scope)
- brainstorm: plan mode flow, correct wizard syntax
- create-skill: fix paths (.agent-skills/), update tool catalog (11 categories)
- git-workflow: rewrite all tool calls to individual git_* tools, core vs deferred docs
- interactive-debugging: add 4 new patterns (exception breakpoint, remote debug,
  thread dump, field watchpoint), Spring proxy guidance, advanced breakpoint/inspect tables
- systematic-debugging: add Phase 1.5 bisection, project-type diagnostics (Spring,
  Testcontainers, automation suites), hypothesis ranking heuristics
- tdd: add outside-in endpoint TDD, CRUD checklist, Kotlin test data factories,
  Spring annotation decision tree, agent-specific TDD rules, anti-pattern risk table
- writing-plans: adapt for plan card UI (PlanParser format, plan editor comments,
  task_progress index sync, revision flow)
- subagent-driven: fix scope/agent_type, add 8 bundled agent types table

Debug tools (3 meta-tools enhanced):
- debug_step: add force_step_into (bypass step filters), force_step_over (ignore BPs)
- debug_inspect: add set_value via XValueModifier with evaluate fallback
- debug_breakpoints: add suspend_policy (thread/all/none), pass_count via reflection
- Fix evaluate() bug: use resolvePresentation() instead of result.toString()
- Fix hotswap: remove HotSwapUIImpl cast, correlate session correctly
- Add findXValueByName() to AgentDebugController for set_value support

System prompt (Claude Code-inspired improvements):
- Agent role: generic→specific (IDE context, enterprise integrations)
- Tool preference hierarchy: IDE tools over shell commands with explicit mappings
- Read Before Edit rule
- Skill-driven workflow triggers in Rules (bug→debugging, feature→tdd, planning→plans)
- Subagent delegation guidan